--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,10 +9,10 @@
     </div>
   </div>
   <nav class="site-nav">
-    <a href="#experience">Experience</a>
-    <a href="#fleet">Fleet</a>
-    <a href="#membership">Membership</a>
-    <a href="#calendar">Calendar</a>
-    <a class="nav-pill" href="#visit">Plan a Visit</a>
+    <a href="{{ "/experience/" | relative_url }}">Experience</a>
+    <a href="{{ "/fleet/" | relative_url }}">Fleet</a>
+    <a href="{{ "/membership/" | relative_url }}">Membership</a>
+    <a href="{{ "/calendar/" | relative_url }}">Calendar</a>
+    <a class="nav-pill" href="{{ "/visit/" | relative_url }}">Plan a Visit</a>
   </nav>
 </header>
