--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -261,6 +261,11 @@ main {
   font-size: clamp(1.6rem, 2.3vw, 2.3rem);
 }
 
+.section-body {
+  display: grid;
+  gap: 1.5rem;
+}
+
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
